--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,12 @@
 			<version>6.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.200</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
     <build>
